--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -1,4 +1,4 @@
-name: Code Review using CodeBERT
+name: Code Review
 
 on:
   push:
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install transformers torch
+          pip install transformers sentencepiece torch  # Added sentencepiece
 
       - name: Get list of changed files
         id: files
@@ -40,6 +40,6 @@ jobs:
           fi
           echo "changed_files=$files" >> $GITHUB_ENV
 
-      - name: Run code review with CodeBERT
+      - name: Run code review with model
         run: |
           python review_code.py "${{ env.changed_files }}"
